hardware/build/log/idf_py_stdout_output_42488
[1/10] Performing build step for 'bootloader'
[1/1] C:\Windows\system32\cmd.exe /C "cd /D C:\projects\_esp\study-budy\hardware\build\bootloader\esp-idf\esptool_py && C:\esp\tools\Espressif\python_env\idf5.4_py3.11_env\Scripts\python.exe C:/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 C:/projects/_esp/study-budy/hardware/build/bootloader/bootloader.bin"
Bootloader binary size 0x6580 bytes. 0xa80 bytes (9%) free.
[2/10] No install step for 'bootloader'
[3/10] Completed 'bootloader'
[4/10] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/Src/mpu6050.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/Src/mpu6050.c.obj 
ccache C:\esp\tools\Espressif\tools\xtensa-esp-elf\esp-14.2.0_20241119\xtensa-esp-elf\bin\xtensa-esp32-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"v5.4.1-268-g6897a7bf40\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -IC:/projects/_esp/study-budy/hardware/build/config -IC:/projects/_esp/study-budy/hardware/main/Inc -IC:/esp/esp-idf/components/newlib/platform_include -IC:/esp/esp-idf/components/freertos/config/include -IC:/esp/esp-idf/components/freertos/config/include/freertos -IC:/esp/esp-idf/components/freertos/config/xtensa/include -IC:/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -IC:/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -IC:/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -IC:/esp/esp-idf/components/freertos/esp_additions/include -IC:/esp/esp-idf/components/esp_hw_support/include -IC:/esp/esp-idf/components/esp_hw_support/include/soc -IC:/esp/esp-idf/components/esp_hw_support/include/soc/esp32 -IC:/esp/esp-idf/components/esp_hw_support/dma/include -IC:/esp/esp-idf/components/esp_hw_support/ldo/include -IC:/esp/esp-idf/components/esp_hw_support/debug_probe/include -IC:/esp/esp-idf/components/esp_hw_support/port/esp32/. -IC:/esp/esp-idf/components/esp_hw_support/port/esp32/include -IC:/esp/esp-idf/components/heap/include -IC:/esp/esp-idf/components/heap/tlsf -IC:/esp/esp-idf/components/log/include -IC:/esp/esp-idf/components/soc/include -IC:/esp/esp-idf/components/soc/esp32 -IC:/esp/esp-idf/components/soc/esp32/include -IC:/esp/esp-idf/components/soc/esp32/register -IC:/esp/esp-idf/components/hal/platform_port/include -IC:/esp/esp-idf/components/hal/esp32/include -IC:/esp/esp-idf/components/hal/include -IC:/esp/esp-idf/components/esp_rom/include -IC:/esp/esp-idf/components/esp_rom/esp32/include -IC:/esp/esp-idf/components/esp_rom/esp32/include/esp32 -IC:/esp/esp-idf/components/esp_rom/esp32 -IC:/esp/esp-idf/components/esp_common/include -IC:/esp/esp-idf/components/esp_system/include -IC:/esp/esp-idf/components/esp_system/port/soc -IC:/esp/esp-idf/components/esp_system/port/include/private -IC:/esp/esp-idf/components/xtensa/esp32/include -IC:/esp/esp-idf/components/xtensa/include -IC:/esp/esp-idf/components/xtensa/deprecated_include -IC:/esp/esp-idf/components/lwip/include -IC:/esp/esp-idf/components/lwip/include/apps -IC:/esp/esp-idf/components/lwip/include/apps/sntp -IC:/esp/esp-idf/components/lwip/lwip/src/include -IC:/esp/esp-idf/components/lwip/port/include -IC:/esp/esp-idf/components/lwip/port/freertos/include -IC:/esp/esp-idf/components/lwip/port/esp32xx/include -IC:/esp/esp-idf/components/lwip/port/esp32xx/include/arch -IC:/esp/esp-idf/components/lwip/port/esp32xx/include/sys -IC:/esp/esp-idf/components/esp_wifi/include -IC:/esp/esp-idf/components/esp_wifi/include/local -IC:/esp/esp-idf/components/esp_wifi/wifi_apps/include -IC:/esp/esp-idf/components/esp_wifi/wifi_apps/nan_app/include -IC:/esp/esp-idf/components/esp_event/include -IC:/esp/esp-idf/components/esp_phy/include -IC:/esp/esp-idf/components/esp_phy/esp32/include -IC:/esp/esp-idf/components/esp_netif/include -IC:/esp/esp-idf/components/esp_http_client/include -IC:/esp/esp-idf/components/driver/deprecated -IC:/esp/esp-idf/components/driver/i2c/include -IC:/esp/esp-idf/components/driver/touch_sensor/include -IC:/esp/esp-idf/components/driver/twai/include -IC:/esp/esp-idf/components/driver/touch_sensor/esp32/include -IC:/esp/esp-idf/components/esp_pm/include -IC:/esp/esp-idf/components/esp_ringbuf/include -IC:/esp/esp-idf/components/esp_driver_gpio/include -IC:/esp/esp-idf/components/esp_driver_pcnt/include -IC:/esp/esp-idf/components/esp_driver_gptimer/include -IC:/esp/esp-idf/components/esp_driver_spi/include -IC:/esp/esp-idf/components/esp_driver_mcpwm/include -IC:/esp/esp-idf/components/esp_driver_ana_cmpr/include -IC:/esp/esp-idf/components/esp_driver_i2s/include -IC:/esp/esp-idf/components/esp_driver_sdmmc/include -IC:/esp/esp-idf/components/sdmmc/include -IC:/esp/esp-idf/components/esp_driver_sdspi/include -IC:/esp/esp-idf/components/esp_driver_sdio/include -IC:/esp/esp-idf/components/esp_driver_dac/include -IC:/esp/esp-idf/components/esp_driver_rmt/include -IC:/esp/esp-idf/components/esp_driver_tsens/include -IC:/esp/esp-idf/components/esp_driver_sdm/include -IC:/esp/esp-idf/components/esp_driver_i2c/include -IC:/esp/esp-idf/components/esp_driver_uart/include -IC:/esp/esp-idf/components/vfs/include -IC:/esp/esp-idf/components/esp_driver_ledc/include -IC:/esp/esp-idf/components/esp_driver_parlio/include -IC:/esp/esp-idf/components/esp_driver_usb_serial_jtag/include -IC:/esp/esp-idf/components/nvs_flash/include -IC:/esp/esp-idf/components/esp_partition/include -mlongcalls -Wno-frame-address  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=C:/projects/_esp/study-budy/hardware=. -fmacro-prefix-map=C:/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/Src/mpu6050.c.obj -MF esp-idf\main\CMakeFiles\__idf_main.dir\Src\mpu6050.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/Src/mpu6050.c.obj -c C:/projects/_esp/study-budy/hardware/main/Src/mpu6050.c
C:/projects/_esp/study-budy/hardware/main/Src/mpu6050.c: In function 'i2c_master_init':
C:/projects/_esp/study-budy/hardware/main/Src/mpu6050.c:18:5: error: implicit declaration of function 'ESP_RET_ON_ERROR' [-Wimplicit-function-declaration]
   18 |     ESP_RET_ON_ERROR(i2c_param_config(MPU6050_I2C_NUM, &cfg), TAG, "cfg failed");
      |     ^~~~~~~~~~~~~~~~
[5/10] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/Src/main.c.obj
ninja: build stopped: subcommand failed.
